🔧 update project info

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,12 @@ long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/xepor/xepor
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
-#    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
+    Documentation = https://xepor.readthedocs.io/en/latest/index.html
+    Source = https://github.com/xepor/xepor
+    Changelog = https://xepor.readthedocs.io/en/latest/changelog.html
+    Tracker = https://github.com/xepor/xepor/issues
+    Download = https://pypi.org/project/xepor/#files
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
-#    Download = https://pypi.org/project/PyScaffold/#files
 #    Twitter = https://twitter.com/PyScaffold
 
 # Change if running only on Windows, Mac or Linux (comma-separated)
@@ -29,8 +29,22 @@ platforms = any
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.org/classifiers/
 classifiers =
-    Development Status :: 4 - Beta
-    Programming Language :: Python
+    License :: OSI Approved :: Apache Software License
+    Development Status :: 2 - Pre-Alpha
+    Operating System :: MacOS
+    Operating System :: POSIX
+    Operating System :: Microsoft :: Windows
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: Implementation :: CPython
+    Topic :: Security
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Internet :: Proxy Servers
+    Topic :: System :: Networking :: Monitoring
+    Topic :: Software Development :: Testing
+    Typing :: Typed
 
 
 [options]
