--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Security
     Topic :: Internet :: WWW/HTTP
@@ -55,7 +56,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.7
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -63,6 +64,12 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    mitmproxy>=6.0.2,<7.0.0
+    parse>=1.19.0
+    # Markupsafe breaking change broke Jinja and some other libs
+    # Pinning it to a version which works even though we are not using explicitly
+    # https://github.com/aws/aws-sam-cli/issues/3661
+    markupsafe==2.0.1
 
 
 [options.packages.find]
@@ -80,6 +87,7 @@ testing =
     setuptools
     pytest
     pytest-cov
+    tox
 
 [options.entry_points]
 # Add here console scripts like:
