--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ platforms = any
 # https://pypi.org/classifiers/
 classifiers =
     License :: OSI Approved :: Apache Software License
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 4 - Beta
     Operating System :: MacOS
     Operating System :: POSIX
     Operating System :: Microsoft :: Windows
@@ -64,12 +64,8 @@ python_requires = >=3.7
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    mitmproxy>=6.0.2,<7.0.0
+    mitmproxy>=7.0.0,<8.0.0
     parse>=1.19.0
-    # Markupsafe breaking change broke Jinja and some other libs
-    # Pinning it to a version which works even though we are not using explicitly
-    # https://github.com/aws/aws-sam-cli/issues/3661
-    markupsafe==2.0.1
 
 
 [options.packages.find]
