✅ Add compatibility test against mitmproxy 8.x

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,15 @@
 
 [tox]
 minversion = 3.15
-envlist = default
+envlist = mitmproxy7,mitmproxy8
 isolated_build = True
 
 
 [testenv]
 description = Invoke pytest to run automated tests
+deps =
+    mitmproxy7: mitmproxy>=7.0.0,<8.0.0
+    mitmproxy8: mitmproxy>=8.0.0,<9.0.0
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
