--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,6 @@
 # To build the module reference correctly, make sure every external package
 # under `install_requires` in `setup.cfg` is also listed here!
 # sphinx_rtd_theme
-myst_parser
 sphinx>=3.2.1
+myst_parser
+sphinx_rtd_theme
