✨ Add apidoc build tox command (untested)

--- a/tox.ini
+++ b/tox.ini
@@ -37,9 +37,10 @@ commands =
     build: python -m build {posargs}
 
 
-[testenv:{docs,doctests,linkcheck}]
+[testenv:{docs,apidoc,doctests,linkcheck}]
 description =
     docs: Invoke sphinx-build to build the docs
+    apidoc: Invoke sphinx-apidoc to build the API docs
     doctests: Invoke sphinx-build to run doctests
     linkcheck: Check for broken links in the documentation
 setenv =
@@ -52,6 +53,7 @@ deps =
     -r {toxinidir}/docs/requirements.txt
     # ^  requirements.txt shared with Read The Docs
 commands =
+    apidoc: sphinx-apidoc --implicit-namespaces -f -o "{env:DOCSDIR}/api" "{toxinidir}/src"
     sphinx-build --color -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
 
 
