--- a/setup.cfg
+++ b/setup.cfg
@@ -64,8 +64,8 @@ python_requires = >=3.7
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    mitmproxy>=7.0.0,<9.0.0
-    parse>=1.19.0
+    mitmproxy>=7.0.0,<10.0.0
+    parse>=1.19.0,<2.0.0
 
 
 [options.packages.find]
