🔨 Add test configuration for multiple python versions and app versions

--- a/tox.ini
+++ b/tox.ini
@@ -3,16 +3,27 @@
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
 [tox]
-minversion = 3.15
-envlist = mitmproxy7,mitmproxy8
+minversion = 3.24
+envlist = py{37,38,39,310,311,312}-mitmproxy{7,8},py{39,310,311,312}-mitmproxy9
 isolated_build = True
 
 
 [testenv]
+basepython =
+    py37: python3.7
+    py38: python3.8
+    py39: python3.9
+    py310: python3.10
+    py311: python3.11
+    py312: python3.12
+    docs: python3.11
+    lint: python3.11
+
 description = Invoke pytest to run automated tests
 deps =
     mitmproxy7: mitmproxy>=7.0.0,<8.0.0
     mitmproxy8: mitmproxy>=8.0.0,<9.0.0
+    mitmproxy9: mitmproxy>=9.0.0,<10.0.0
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
@@ -22,6 +33,17 @@ extras =
 commands =
     pytest {posargs}
 
+# To run `tox -e lint` you need to make sure you have a
+# `.pre-commit-config.yaml` file. See https://pre-commit.com
+[testenv:lint]
+description = Perform static analysis and style checks
+skip_install = True
+deps = pre-commit
+passenv =
+    HOMEPATH
+    PROGRAMDATA
+commands =
+    pre-commit run --all-files {posargs:--show-diff-on-failure}
 
 [testenv:{build,clean}]
 description =
@@ -33,14 +55,14 @@ changedir = {toxinidir}
 deps =
     build: build[virtualenv]
 commands =
-    clean: python -c 'from shutil import rmtree; rmtree("build", True); rmtree("dist", True)'
+    clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
+    clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
     build: python -m build {posargs}
 
 
-[testenv:{docs,apidoc,doctests,linkcheck}]
+[testenv:{docs,doctests,linkcheck}]
 description =
     docs: Invoke sphinx-build to build the docs
-    apidoc: Invoke sphinx-apidoc to build the API docs
     doctests: Invoke sphinx-build to run doctests
     linkcheck: Check for broken links in the documentation
 setenv =
@@ -53,7 +75,6 @@ deps =
     -r {toxinidir}/docs/requirements.txt
     # ^  requirements.txt shared with Read The Docs
 commands =
-    apidoc: sphinx-apidoc --implicit-namespaces -f -o "{env:DOCSDIR}/api" "{toxinidir}/src"
     sphinx-build --color -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
 
 
@@ -65,10 +86,11 @@ description =
 skip_install = True
 changedir = {toxinidir}
 passenv =
+    # See: https://twine.readthedocs.io/en/latest/
     TWINE_USERNAME
     TWINE_PASSWORD
     TWINE_REPOSITORY
 deps = twine
 commands =
     python -m twine check dist/*
-    python -m twine upload {posargs:--repository testpypi} dist/*
+    python -m twine upload {posargs:--repository {env:TWINE_REPOSITORY:testpypi}} dist/*
