--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,11 @@ jobs:
     name: Build sdist and (pure Python) wheel
     runs-on: ubuntu-22.04
     steps:
-      - if: github.event.ref_type == 'tag'
+      - name: Checkout current commit
+        if: github.event.ref_type == 'tag'
         uses: actions/checkout@v3
-      - if: github.event_name == 'workflow_dispatch'
+      - name: Checkout full source code tree
+        if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -28,6 +30,11 @@ jobs:
       - name: Install tox
         run: |
           python -m pip install --upgrade tox
+      - name: Generate version number without local part for TestPyPI
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          python -m pip install --upgrade setuptools_scm
+          echo "SETUPTOOLS_SCM_PRETEND_VERSION=$(python -c 'from setuptools_scm import _get_version as v, Configuration as C;c=C.from_file("./pyproject.toml");c.local_scheme="no-local-version";print(v(c))')" >> "$GITHUB_ENV"
       - name: Build packages
         run: |
           python -m tox -e build
