--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,8 @@ skip_install = True
 changedir = {toxinidir}
 deps =
     build: build[virtualenv]
+passenv =
+    SETUPTOOLS_SCM_PRETEND_VERSION
 commands =
     clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
     clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
