--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,17 @@ jobs:
     name: Build sdist and (pure Python) wheel
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout current commit
+      - name: Checkout current tag
         if: github.event_name == 'push' && github.ref_type == 'tag' && startsWith(github.ref_name, 'v')
         uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: Checkout full source code tree
         if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          submodules: true
       - uses: actions/setup-python@v4
         name: Install Python
         with:
@@ -35,6 +38,10 @@ jobs:
         run: |
           python -m pip install --upgrade setuptools_scm
           echo "SETUPTOOLS_SCM_PRETEND_VERSION=$(python -c 'from setuptools_scm import _get_version as v, Configuration as C;c=C.from_file("./pyproject.toml");c.local_scheme="no-local-version";print(v(c))')" >> "$GITHUB_ENV"
+      - name: Run basic tests
+        run: |
+          python -m tox
+          python -m tox -e docs,doctests,linkcheck
       - name: Build packages
         run: |
           python -m tox -e build
