--- a/tox.ini
+++ b/tox.ini
@@ -4,25 +4,25 @@
 
 [tox]
 minversion = 3.24
-envlist = py{38,39,310,311,312}-mitmproxy{7,8},py{39,310,311,312}-mitmproxy9
+envlist = py{39,310,311,312}-mitmproxy9,py{310,311,312,313}-mitmproxy{10,11}
 isolated_build = True
 
 
 [testenv]
 basepython =
-    py38: python3.8
     py39: python3.9
     py310: python3.10
     py311: python3.11
     py312: python3.12
+    py313: python3.13
     docs: python3.11
     lint: python3.11
 
 description = Invoke pytest to run automated tests
 deps =
-    mitmproxy7: mitmproxy>=7.0.0,<8.0.0
-    mitmproxy8: mitmproxy>=8.0.0,<9.0.0
     mitmproxy9: mitmproxy>=9.0.0,<10.0.0
+    mitmproxy10: mitmproxy>=10.0.0,<11.0.0
+    mitmproxy11: mitmproxy>=11.0.0,<12.0.0
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
